force-app/main/default/objects/Contact/fields/ACC_Contact_obsolete__c.field-meta.xml
<CustomField>
    <fullName>ACC_Contact_obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher cette case si le contact devient obsolète</inlineHelpText>
    <label>Contact obsolète</label>
    <type>Checkbox</type>
</CustomField>