force-app/main/default/objects/Contact/fields/CO_Interet__c.field-meta.xml
<CustomField>
    <fullName>CO_Interet__c</fullName>
    <label>Intérêt(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vapeur</fullName>
            </value>
            <value>
                <fullName>Fluide Thermique</fullName>
            </value>
            <value>
                <fullName>Eau chaude</fullName>
            </value>
            <value>
                <fullName>Air chaud</fullName>
            </value>
            <value>
                <fullName>Traitement d&apos;eau</fullName>
            </value>
            <value>
                <fullName>Brûleur</fullName>
            </value>
            <value>
                <fullName>Traitement des COV et odeurs</fullName>
            </value>
            <value>
                <fullName>Location de chaudières</fullName>
            </value>
            <value>
                <fullName>Pièces de rechanges</fullName>
            </value>
            <value>
                <fullName>Services (Réparation, expertise, autre)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>