force-app/main/default/objects/Contact/fields/CON_ContactContrat__c.field-meta.xml
<CustomField>
    <fullName>CON_ContactContrat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Contrat</label>
    <type>Checkbox</type>
</CustomField>