force-app/main/default/objects/Contact/fields/CON_ContactERP__c.field-meta.xml
<CustomField>
    <fullName>CON_ContactERP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de signaler que le contact a été créé automatiquement lors de l&apos;interface DEVIS GPIC vers Salesforce</description>
    <inlineHelpText>Ce champ permet de signaler que le contact a été créé automatiquement lors de l&apos;interface DEVIS GPIC vers Salesforce</inlineHelpText>
    <label>Contact ERP</label>
    <type>Checkbox</type>
</CustomField>