force-app/main/default/objects/Contact/fields/CON_ContactPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CON_ContactPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le contact prioritaire du compte client</description>
    <label>Contact Principal</label>
    <type>Checkbox</type>
</CustomField>