force-app/main/default/objects/Contact/fields/CON_Info_contact_comp__c.field-meta.xml
<CustomField>
    <fullName>CON_Info_contact_comp__c</fullName>
    <description>Informations de contact complémentaires</description>
    <inlineHelpText>Vous pouvez saisir dans ce champs vos informations de contacts, numéro de téléphone multiples etc.</inlineHelpText>
    <label>Informations de contact complémentaires</label>
    <type>TextArea</type>
</CustomField>