force-app/main/default/objects/Contact/fields/ELLISPHERE__Elli_Tch_AntiDuplicateName__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Tch_AntiDuplicateName__c</fullName>
    <formula>AccountId + LastName + FirstName + IF( AND(NOT(ISNULL(Birthdate)),NOT(ISBLANK(Birthdate))) , TEXT(YEAR( Birthdate )) + &apos;-&apos; + TEXT(MONTH(Birthdate)) + &apos;-&apos; + TEXT(DAY(Birthdate)), &apos;&apos;)</formula>
    <label>Tch_NomAntiDoublon</label>
    <type>Text</type>
</CustomField>