force-app/main/default/objects/Contact/validationRules/VR_CON_EmailObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON_EmailObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.USER_ByPassRegleValidation__c = FALSE, 
ISBLANK(Email), Account.Tech_ProvenancePiste__c = False)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Veuillez renseigner l&apos;adresse email</errorMessage>
</ValidationRule>